--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -308,6 +308,20 @@
           </div>
         </div>
       </div>
+      <br>
+      <div class="form-box">
+        {{ form.expenses.label(class="form-control-label") }}
+          {% if form.expenses.errors %}
+              {{ form.expenses(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                  {% for error in form.expenses.errors %}
+                      <span>{{ error }}</span>
+                  {% endfor %}
+              </div>
+          {% else %}
+              {{ form.expenses(class="form-control form-control-lg", placeholder="Uneti registraciju ličnog vozila") }}
+          {% endif %}
+      </div>
 
 
     </fieldset>
