ver 0.208 izmnjena opcija 'zajedno sa'

--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -316,7 +316,7 @@
                           {% endfor %}
                       </div>
                   {% else %}
-                      {{ form.together_with(class="form-control form-control-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
+                      {{ form.together_with(class="form-select form-select-lg", placeholder="Uneti broj putnog naloga kolege koji vozi službeno vozilo") }}
                   {% endif %}
               </div>
             </div>
