ver 0.213 dodata opcija 'dodaj trošak'

--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -393,6 +393,9 @@
       <br>
       <br>
       <hr>
+      <div class="form-group">
+        <a class="btn btn-info" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodaj trošak</a>
+      </div>
       <br>
       <table id="data" border="1" class="table table-striped">
           <thead>
