--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -393,6 +393,9 @@
       <br>
       <br>
       <hr>
+      <div class="form-group">
+        <a class="btn btn-info" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodaj trošak</a>
+      </div>
       <br>
       <table id="data" border="1" class="table table-striped">
           <thead>
@@ -407,7 +410,7 @@
             {% for trosak in troskovi %}
             <tr>
               <td class="align-middle"> {{ trosak.expenses_type }} </td>
-              <td class="align-middle"> 2022-10-09 </td>
+              <td class="align-middle"> {{ trosak.expenses_date }} </td>
               <td class="align-middle"> {{ trosak.description }} </td>
               <td class="align-middle"> {{ trosak.amount }} {{ trosak.amount_currency }} </td>
             </tr>
