ver 0.216 dodata opcija brisanja troška

--- a/putninalozi/templates/expenses.html
+++ b/putninalozi/templates/expenses.html
@@ -82,9 +82,31 @@
     </fieldset>
     <div class="form-group">
       {{ form.submit(class="btn btn-outline-info") }}
+      {% if legend != 'Dodavanje troškova:' %}
+      <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#DeleteModal">Delete</button>
+      <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="DeleteModalLabel">Izbriši trošak</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-footer">
+              <form action="{{ url_for('travel_warrants.delete_expense', warrant_id=warrant.travel_warrant_id, expenses_id=expense.expenses_id) }}" method="post">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvori</button>
+                <a class="btn btn-danger" href="{{ url_for('travel_warrants.delete_expense', warrant_id=warrant.travel_warrant_id, expenses_id=expense.expenses_id) }}"> Izbriši trošak </a>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endif %}
     </div>
   </form>
 </div>
+
 
 <br>
 <table id="data" border="1" class="table table-striped">
