--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -4,7 +4,7 @@
   <form  action="" method="POST">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-3">{{ legend }}   <a class="btn btn-info btn-sm mb-2" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzimi dokument</a></legend>
+      <legend class="border-bottom mb-3">{{ legend }}   <a class="shadow btn btn-info btn-sm mb-2" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzimi dokument</a></legend>
       {% if form.errors %}
       debag line: {{ form.errors }}
       {% endif %}
@@ -385,7 +385,7 @@
       <br>
       <hr>
       <div class="form-group">
-        <a class="btn btn-outline-danger btn-block" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodaj trošak</a>
+        <a class="shadow btn btn-outline-danger btn-block" href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}">Dodaj trošak</a>
       </div>
       <br>
       <table id="data" border="1" class="table table-striped">
@@ -400,8 +400,8 @@
           <tbody>
             {% for trosak in troskovi %}
             <tr>
-              <td class="align-middle"> {{ trosak.expenses_type }} </td>
-              <td class="align-middle"> {{ trosak.expenses_date }} </td>
+              <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
+              <td class="align-middle"> {{ trosak.expenses_date.date() }} </td>
               <td class="align-middle"> {{ trosak.description }} </td>
               <td class="align-middle"> {{ trosak.amount }} {{ trosak.amount_currency }} </td>
             </tr>
