--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -327,8 +327,8 @@
           <tbody>
             {% for trosak in troskovi %}
             <tr>
-              <td class="align-middle"> {{ trosak.expenses_type }} </td>
-              <td class="align-middle"> {{ trosak.expenses_date }} </td>
+              <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
+              <td class="align-middle"> {{ trosak.expenses_date.date() }} </td>
               <td class="align-middle"> {{ trosak.description }} </td>
               <td class="align-middle"> {{ trosak.amount }} {{ trosak.amount_currency }} </td>
             </tr>
