--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -306,6 +306,7 @@
         </div>
       </fieldset>
       <div class="form-group">
+        <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">back</a>
         {{ form.submit(class="btn btn-outline-info") }}
       </div>
   </form>
