--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -4,7 +4,7 @@
   <form  action="" method="POST">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-3">{{ legend }}   <a class="shadow btn btn-info btn-sm mb-2" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzimi dokument</a></legend>
+      <legend class="border-bottom mb-3">{{ legend }}</legend>
       {% if form.errors %}
       debag line: {{ form.errors }}
       {% endif %}
@@ -415,6 +415,7 @@
 
     </fieldset>
     <div class="form-group">
+      <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">back</a>
       {% if warrant.status == 'kreiran' %}
         <input class="btn btn-primary" type="submit" name="dugme" value="Završi">
       {% elif warrant.status == 'završen' %}
@@ -422,6 +423,7 @@
       {% endif %}
 
       {{ form.submit(class="btn btn-outline-primary") }}
+      <a class="shadow btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">Preuzimi dokument</a>
     </div>
   </form>
 </div>
