--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -74,7 +74,7 @@
           <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
           <td class="align-middle"> {{ warrant.travelwarrant_company.companyname }} </td>
           <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} </td>
-          <td class="align-middle"> {{ warrant.together_with }} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
+          <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
           <td class="align-middle"> {{ warrant.status }} </td>
         </tr>
       {% endfor %}
@@ -95,7 +95,7 @@
           <tr>
             <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
             <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
-            <td class="align-middle"> {{ warrant.together_with }} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
+            <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
             <td class="align-middle"> {{ warrant.start_datetime.date() }} </td>
             <td class="align-middle"> {{ warrant.status }} </td>
           </tr>
@@ -118,7 +118,7 @@
           <tr>
             <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
             <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
-            <td class="align-middle"> {{ warrant.together_with }} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
+            <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
             <td class="align-middle"> {{ warrant.start_datetime.date() }} </td>
             <td class="align-middle"> {{ warrant.status }} </td>
           </tr>
