--- a/putninalozi/templates/login.html
+++ b/putninalozi/templates/login.html
@@ -40,7 +40,7 @@
             <div class="form-group">
               {{ form.submit(class="btn btn-outline-info") }}
               <small class="text-muted ml-2">
-                <a href="{{ url_for('users.reset_request') }}">Resetovanje Lozinke?</a>
+                <a href="{{ url_for('users.reset_request') }}">Resetovanje lozinke?</a>
               </small>
             </div>
           </form>
