--- a/putninalozi/templates/vehicle.html
+++ b/putninalozi/templates/vehicle.html
@@ -84,20 +84,20 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="DeleteModalLabel">Da li zaista želiš da trajno ukloniš vozilo {{form.vehicle_registration.data}}?</h5>
+        <h5 class="modal-title" id="DeleteModalLabel">Da li zaista želite da trajno izbrišete vozilo {{form.vehicle_registration.data}}?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <label for="input_password">Da bi uklonio vozilo potrebno je uneti svoju šifru.</label>
+        <label for="input_password">Da biste izbrisali vozilo potrebno je uneti svoju šifru.</label>
       </div>
       <div class="modal-footer">
         <form  action="{{ url_for('vehicles.delete_vehicle', vehicle_id=vehicle.id) }}" method="post">
-          <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="confirm your password to delete vehicle">
+          <input class="form-control" type="password" id="input_password" name="input_password" value="" placeholder="potvrdite lozinkom">
           <br>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <input class="btn btn-danger" type="submit" value="Delete Vehicle">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvorite</button>
+          <input class="btn btn-danger" type="submit" value="Izbrišite vozilo">
         </form>
       </div>
     </div>
