--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -136,6 +136,7 @@
 <script>
   $(document).ready(function () {
     $('#data').DataTable( {
+      order: [[0, 'desc']],
       language: {
         url: "//cdn.datatables.net/plug-ins/1.12.1/i18n/sr-SP.json"
       }
